/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/7.1/userguide/building_java_projects.html
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    application
    kotlin("jvm")
    id("io.freefair.lombok")
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(16))
    }
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation("org.junit.jupiter:junit-jupiter:_")
    testImplementation("org.assertj:assertj-core:_")

    // This dependency is used by the application.
    implementation("com.google.guava:guava:_")
    implementation(Kotlin.stdlib.jdk8)
}

application {
    // Define the main class for the application.
    mainClass.set("playground.App")
}


tasks.test {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
